// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pointer onClick Test onAuxClick reports correct native event properties on middle click 1`] = `
{
  "altKey": false,
  "button": 1,
  "buttons": 0,
  "clientX": 110,
  "clientY": 165,
  "ctrlKey": false,
  "detail": 0,
  "height": 0,
  "isPrimary": true,
  "metaKey": false,
  "offsetX": 100,
  "offsetY": 99,
  "pageX": 110,
  "pageY": 165,
  "pointerId": 1,
  "pointerType": "mouse",
  "pressure": 0,
  "screenX": 110,
  "screenY": 165,
  "shiftKey": false,
  "tangentialPressure": 0,
  "target": "<target>",
  "tiltX": 0,
  "tiltY": 0,
  "twist": 0,
  "width": 0,
  "x": 110,
  "y": 165,
}
`;

exports[`Pointer onClick Test onAuxClick reports correct native event properties on right click 1`] = `
{
  "altKey": false,
  "button": 2,
  "buttons": 0,
  "clientX": 110,
  "clientY": 165,
  "ctrlKey": false,
  "detail": 0,
  "height": 0,
  "isPrimary": true,
  "metaKey": false,
  "offsetX": 100,
  "offsetY": 99,
  "pageX": 110,
  "pageY": 165,
  "pointerId": 1,
  "pointerType": "mouse",
  "pressure": 0,
  "screenX": 110,
  "screenY": 165,
  "shiftKey": false,
  "tangentialPressure": 0,
  "target": "<target>",
  "tiltX": 0,
  "tiltY": 0,
  "twist": 0,
  "width": 0,
  "x": 110,
  "y": 165,
}
`;

exports[`Pointer onClick Test onClick reports correct native event properties on left click 1`] = `
{
  "altKey": false,
  "button": 0,
  "buttons": 0,
  "clientX": 110,
  "clientY": 165,
  "ctrlKey": false,
  "detail": 0,
  "height": 0,
  "isPrimary": true,
  "metaKey": false,
  "offsetX": 100,
  "offsetY": 99,
  "pageX": 110,
  "pageY": 165,
  "pointerId": 1,
  "pointerType": "mouse",
  "pressure": 0,
  "screenX": 110,
  "screenY": 165,
  "shiftKey": false,
  "tangentialPressure": 0,
  "target": "<target>",
  "tiltX": 0,
  "tiltY": 0,
  "twist": 0,
  "width": 0,
  "x": 110,
  "y": 165,
}
`;
